force-app/main/default/objects/MA_Assessment_Request__c/MA_Assessment_Request__c.object-meta.xml
<CustomObject>
    <label>Assessment Request</label>
    <pluralLabel>Assessment Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <type>AutoNumber</type>
        <label>Request Number</label>
        <displayFormat>AR-{0000}</displayFormat>
    </nameField>
</CustomObject>