force-app/main/default/objects/MA_Assessment_Request__c/fields/Context__c.field-meta.xml
<CustomField>
    <fullName>Context__c</fullName>
    <label>What's Prompting the Move</label>
    <description>Free text captured from the assessment request form.</description>
    <type>LongTextArea</type>
    <length>4000</length>
</CustomField>