force-app/main/default/objects/MA_Assessment_Request__c/fields/Executive_Sponsorship__c.field-meta.xml
<CustomField>
    <fullName>Executive_Sponsorship__c</fullName>
    <label>Executive Sponsorship Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Strong — executive is driving this</fullName><label>Strong — executive is driving this</label><default>false</default></value>
            <value><fullName>Moderate — executive is aware and supportive</fullName><label>Moderate — executive is aware and supportive</label><default>false</default></value>
            <value><fullName>Limited — team-level initiative</fullName><label>Limited — team-level initiative</label><default>false</default></value>
            <value><fullName>Unknown</fullName><label>Unknown</label><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>