force-app/main/default/objects/MA_Assessment_Request__c/fields/Internal_Team_Size__c.field-meta.xml
<CustomField>
    <fullName>Internal_Team_Size__c</fullName>
    <label>Internal Team Size for Migration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Just me</fullName><label>Just me</label><default>false</default></value>
            <value><fullName>2–5 people</fullName><label>2–5 people</label><default>false</default></value>
            <value><fullName>5–10 people</fullName><label>5–10 people</label><default>false</default></value>
            <value><fullName>10+ people</fullName><label>10+ people</label><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>