force-app/main/default/objects/MA_Assessment_Request__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <label>Lead</label>
    <description>The Lead created or matched for this requester.</description>
    <type>Lookup</type>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Assessment Requests</relationshipLabel>
    <relationshipName>MA_Assessment_Requests</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>