force-app/main/default/objects/MA_Assessment_Request__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <description>Populated from the client link's own Opportunity lookup at submission time, so the request shows as a related record on the deal in Sales Cloud.</description>
    <type>Lookup</type>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Assessment Requests</relationshipLabel>
    <relationshipName>MA_Assessment_Requests</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>