force-app/main/default/objects/MA_Assessment_Request__c/fields/Pain_Points__c.field-meta.xml
<CustomField>
    <fullName>Pain_Points__c</fullName>
    <label>Pain Points with Current Platform</label>
    <description>What is not working well with the current marketing automation platform?</description>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>