force-app/main/default/objects/MA_Assessment_Request__c/fields/Saved_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Saved_Configuration__c</fullName>
    <label>Client Link</label>
    <description>The client-specific configured link the requester was viewing when they booked an assessment.</description>
    <type>Lookup</type>
    <referenceTo>MA_Saved_Configuration__c</referenceTo>
    <relationshipLabel>Assessment Requests</relationshipLabel>
    <relationshipName>Assessment_Requests</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>