force-app/main/default/objects/MA_Assessment_Request__c/fields/Submitted_At__c.field-meta.xml
<CustomField>
    <fullName>Submitted_At__c</fullName>
    <label>Submitted At</label>
    <description>Timestamp when the prospect submitted the assessment form.</description>
    <type>DateTime</type>
</CustomField>