force-app/main/default/objects/MA_Assessment_Request__c/fields/Success_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Success_Criteria__c</fullName>
    <label>Success Criteria</label>
    <description>How will the prospect know the migration has succeeded? Metrics, milestones, or outcomes they care about.</description>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>