force-app/main/default/objects/MA_Assessment_Request__c/listViews/All_Assessment_Requests.listView-meta.xml
<ListView>
    <fullName>All_Assessment_Requests</fullName>
    <filterScope>Everything</filterScope>
    <label>All Assessment Requests</label>
    <columns>NAME</columns>
    <columns>Requester_Name__c</columns>
    <columns>Company__c</columns>
    <columns>Status__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Lead__c</columns>
    <columns>Saved_Configuration__c</columns>
    <columns>CREATED_DATE</columns>
</ListView>